--- a/WebApi2/WebApi2.csproj
+++ b/WebApi2/WebApi2.csproj
@@ -172,6 +172,7 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\AuditController.cs" />
+    <Compile Include="Controllers\CarController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\UsersController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
@@ -179,6 +180,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\Car.cs" />
+    <Compile Include="Models\utility\CarUtility.cs" />
     <Compile Include="Models\QCSrv.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Models\utility\clsDBHelper.cs" />
