--- a/WebApi2/Web.config
+++ b/WebApi2/Web.config
@@ -25,6 +25,7 @@
       </system.Web>
   -->
   <system.web>
+    <customErrors mode="Off"/>    
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime />
     <pages controlRenderingCompatibilityVersion="4.0" />
