--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -138,6 +138,7 @@
     <Compile Include="Models\General\ResultMsg.cs" />
     <Compile Include="Models\GroupProductStatistics.cs" />
     <Compile Include="Models\CompanyProductStatistics.cs" />
+    <Compile Include="Models\Protection\QCProT.cs" />
     <Compile Include="Models\PT\FinalQC.cs" />
     <Compile Include="Models\AuditStatistics.cs" />
     <Compile Include="Models\PT\Shop.cs" />
@@ -173,6 +174,7 @@
     <Compile Include="Utility\AuditUtility.cs" />
     <Compile Include="Utility\CarUtility.cs" />
     <Compile Include="Utility\CommonUtility.cs" />
+    <Compile Include="Utility\ProtectionUtility.cs" />
     <Compile Include="Utility\SMessageUtility.cs" />
     <Compile Include="Utility\MessageUtility.cs" />
     <Compile Include="Utility\QccasttUtility.cs" />
