saipa-1400-06-13 - multiRepair final On test

--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -160,6 +160,19 @@
     <Compile Include="Models\QCHStatistics.cs" />
     <Compile Include="Models\QCStatistics.cs" />
     <Compile Include="Models\ProductStatistics.cs" />
+    <Compile Include="Models\QSC\qscatcht.cs" />
+    <Compile Include="Models\QSC\qscbdmdt.cs" />
+    <Compile Include="Models\QSC\qscdebat.cs" />
+    <Compile Include="Models\QSC\qscordet.cs" />
+    <Compile Include="Models\QSC\qscrqfistt.cs" />
+    <Compile Include="Models\QSC\qsccocet.cs" />
+    <Compile Include="Models\QSC\qscreqt.cs" />
+    <Compile Include="Models\QSC\qscscpt.cs" />
+    <Compile Include="Models\QSC\qscrqtyt.cs" />
+    <Compile Include="Models\QSC\qscrqrsnt.cs" />
+    <Compile Include="Models\QSC\qscdtstt.cs" />
+    <Compile Include="Models\QSC\qscreft.cs" />
+    <Compile Include="Models\QSC\qscapunt.cs" />
     <Compile Include="Models\Sale\SaleStatus.cs" />
     <Compile Include="Models\QCUsert.cs" />
     <Compile Include="Models\OnlineUsers.cs" />
